--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@vue/composition-api": "^0.6.4",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "echarts": "^5.0.1",
+    "dotenv": "^8.2.0",
+    "echarts": "^5.0.2",
     "global": "^4.4.0",
+    "moment": "^2.29.1",
+    "nodemon": "^2.0.7",
     "particles.js": "^2.0.0",
     "quasar": "^1.0.0",
     "sweetalert2": "^10.14.1",
+    "vue-apexcharts": "^1.6.0",
     "vue-echarts-v3": "^2.0.1",
+    "vue-json-excel": "^0.3.0",
+    "vue-resource": "^1.5.2",
     "vue-router": "^3.5.1",
     "vue-sweetalert2": "^4.2.0"
   },
