--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "particles.js": "^2.0.0",
     "quasar": "^1.0.0",
     "sweetalert2": "^10.14.1",
+    "v-mask": "^2.2.4",
     "vue-apexcharts": "^1.6.0",
     "vue-echarts-v3": "^2.0.1",
     "vue-json-excel": "^0.3.0",
