--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "particles.js": "^2.0.0",
     "quasar": "^1.0.0",
     "sweetalert2": "^10.14.1",
+    "upgrade": "^1.1.0",
     "v-mask": "^2.2.4",
     "vue-apexcharts": "^1.6.0",
     "vue-echarts-v3": "^2.0.1",
